# project-picker

./: .gitignore  Home.py  README.md  migration.sql  package-lock.json  package.json  pyproject.toml
.streamlit/: secrets.toml
app/: globals.css  layout.tsx  page.tsx
app/api/projects/[id]/increment-pomodoro/: route.ts
app/api/projects/all/: route.ts
app/api/projects/pick/: route.ts
app/projects/: page.tsx
components/: ChakraProviderWrapper.tsx  Navbar.tsx  theme.ts
pages/: 1_Project Info.py  2_Contact.py
